fix: :bug: fix overflow issue

--- a/style.css
+++ b/style.css
@@ -63,7 +63,6 @@ hr {
   gap: 40px;
 
   width: 736px;
-  height: 1708px;
   padding: 40px;
 
   border-radius: 24px;
@@ -77,6 +76,7 @@ hr {
 .hero img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 
   border-radius: 12px;
 }
@@ -308,7 +308,6 @@ hr {
     gap: 0;
 
     padding: 0;
-    height: 2043px;
   }
 
   .hero {
